fix problem with responslve menul on tablet

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -36,6 +36,7 @@
 @body-bg: #eaeaea;
 
 @navbar-margin-bottom: 0px;
+@grid-float-breakpoint: 769px;
 
 @table-bg: #fff;
 @breadcrumb-bg: #029fe0;
